force-app/main/default/objects/Area_Operations_Attributes__c/Area_Operations_Attributes__c.object-meta.xml
<CustomObject>
    <description>Attributes to be used based on territory and business</description>
    <label>Area Operational Attributes</label>
    <nameField>
        <label>Area Operations Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Operational Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>