force-app/main/default/objects/Area_Operations_Attributes__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Customer Segment for the selected area</description>
    <inlineHelpText>Customer Segment for the selected area</inlineHelpText>
    <label>Customer Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Customer_Segments</valueSetName>
    </valueSet>
</CustomField>