force-app/main/default/objects/Area_Operations_Attributes__c/fields/Default_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Default_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default warehouse to be used for this postal area</description>
    <inlineHelpText>Default warehouse to be used for this postal area</inlineHelpText>
    <label>Default Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Area Operational Attributes</relationshipLabel>
    <relationshipName>Area_Operational_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>