force-app/main/default/objects/Area_Operations_Attributes__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>District where the area belongs to</description>
    <inlineHelpText>District where the area belongs to</inlineHelpText>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Districts</valueSetName>
    </valueSet>
</CustomField>