force-app/main/default/objects/Area_Operations_Attributes__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office for the operational area</description>
    <inlineHelpText>Office for the operational area</inlineHelpText>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Area Operational Attributes</relationshipLabel>
    <relationshipName>Area_Operational_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>