force-app/main/default/objects/Area_Operations_Attributes__c/fields/Operational_Area_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Operational_Area_Unique_Id__c</fullName>
    <description>Operational Area Unique Identifier, added as Country Alpha2 Code - Customer Segment Id - Postal Code. Example FI-1000-00100</description>
    <inlineHelpText>Operational Area Unique Identifier, added as Country Alpha2 Code - Customer Segment Id - Postal Code. Example FI-1000-00100</inlineHelpText>
    <label>Operational Area Unique Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>