force-app/main/default/objects/Area_Operations_Attributes__c/fields/Postal_Area__c.field-meta.xml
<CustomField>
    <fullName>Postal_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Postal Area Related to this object</description>
    <inlineHelpText>Postal Area Related to this object</inlineHelpText>
    <label>Postal Area</label>
    <referenceTo>Postal_Code_Area__c</referenceTo>
    <relationshipLabel>Area Operational Attributes</relationshipLabel>
    <relationshipName>Area_Operational_Attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>