force-app/main/default/objects/Area_Operations_Attributes__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <description>Profit center assigned to the operational area</description>
    <inlineHelpText>Profit center assigned to the operational area</inlineHelpText>
    <label>Profit Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Profit_Centers</valueSetName>
    </valueSet>
</CustomField>