force-app/main/default/objects/Area_Operations_Attributes__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Property type in the area</description>
    <inlineHelpText>Property type in the area</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Property_Types</valueSetName>
    </valueSet>
</CustomField>