force-app/main/default/objects/Area_Operations_Attributes__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service territory assigned to the operative area</description>
    <inlineHelpText>Service territory assigned to the operative area</inlineHelpText>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Area Operational Attributes</relationshipLabel>
    <relationshipName>Area_Operational_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>